--- a/sobreMi.html
+++ b/sobreMi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-head>
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CV Personal</title>
@@ -17,7 +17,7 @@ head>
 
 <body>
     <header class="header">
-        <img class="imgPerfil" src="./img/foto.png" alt="imagen de perfil">
+        <img class="imgPerfil" src="/img/foto.png" alt="imagen de perfil">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -25,9 +25,12 @@ head>
         </nav>
     </header>
     <main>
-        <section>
+        <section class="title">
             <h1>Sobre Mi</h1>
-            <p class="sobreMi">Hola, Me llamo Juan y vivo en Chile. Tengo una gata que se llama aurora. Estoy
+        </section>
+
+        <section class="sobreMi">
+            <p>Hola, Me llamo Juan y vivo en Chile. Tengo una gata que se llama aurora. Estoy
                 aprendiendo programación en Digital House </p>
         </section>
 
