--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Roboto+Condensed:wght@300&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="./src/assets/css/styles.css">
 </head>
 
 <body>
     <header class="header">
-        <img class="imgPerfil" src="/img/foto.png" alt="imagen de perfil">
+        <img class="imgPerfil" src="./src/assets/img/foto.png" alt="imagen de perfil">
         <nav>
             <ul>
                 <li><a href="sobreMi.html">Sobre Mi</a></li>
